[tool.poetry]
name = "nunif"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
torch = "^2.1.0"
torchvision = "^0.16.0"
torchtext = "^0.16.0"
numpy = "^1.26.1"
pillow = "^10.1.0"
tqdm = "^4.66.1"
wand = ">=0.6.10"
fonttools = "^4.44.0"
scipy = "^1.11.3"
waitress = "^2.1.2"
bottle = "^0.12.25"
diskcache = "^5.6.3"
flake8 = "^6.1.0"
psutil = "^5.9.6"
pyyaml = "^6.0.1"
onnx = "^1.15.0"
lpips = "^0.1.4"
packaging = "^23.2"
timm = "^0.9.10"
numba = "^0.58.1"
av = ">=9.0.0"
rembg = "^2.0.52"
attrdict = "^2.0.1"
wxpython = {url = "https://extras.wxpython.org/wxPython4/extras/linux/gtk3/fedora-38/wxPython-4.2.1-cp310-cp310-linux_x86_64.whl"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
